<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_odom_to_tf</name>
  <version>0.0.0</version>
  <description>Publish a transform from nav_msgs/msg/Odometry messages</description>
  <maintainer email="simonebondi456@gmail.com">Shibodd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
